--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <meta name="MobileOptimized" content="width">
   <meta name="HandheldFriendly" content="true">
   <title>币安网-Binance交易平台实时行情-币探</title>
+  <link rel="shortcut icon" type="image/png" href="./static/img/logo.png">
 </head>
 
 <body>
