--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="applicable-device" content="mobile">
   <meta name="MobileOptimized" content="width">
   <meta name="HandheldFriendly" content="true">
-  <title>币安网-Binance交易平台实时行情-币探</title>
+  <title>全球数字货币交易平台-币探</title>
   <link rel="shortcut icon" type="image/png" href="./static/img/logo.png">
 </head>
 
