--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app" v-cloak></div>
   <!-- built files will be auto injected -->
 </body>
 
