--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="keywords" content="Binance,币安网交易平台,币安网官网,币安网手续费,币安网怎么样,币安网行情,币安网简介,币安网微博地址,币安网哪个国家的">
-  <meta name="description" content="免费提供币安网交易平台实时行情查询，币安网所有交易对数据，还包括币安网官网，币安网所在国家,币安网微博地址,币安网24小时成交量,币安网简介等数据。">
+  <meta name="keywords" content="币探">
+  <meta name="description" content="">
   <link rel="alternate" media="only screen and(max-width: 640px)" href="">
   <meta name="format-detection" content="telephone=no">
-  <meta name="apple-mobile-web-app-title" content="非小号">
+  <meta name="apple-mobile-web-app-title" content="币探">
   <meta http-equiv="Cache-Control" content="no-transform">
   <meta http-equiv="Cache-Control" content="no-siteapp">
   <meta name="applicable-device" content="mobile">
   <meta name="MobileOptimized" content="width">
   <meta name="HandheldFriendly" content="true">
   <title>全球数字货币交易平台-币探</title>
-  <link rel="shortcut icon" type="image/png" href="./static/img/logo.png">
+  <link rel="shortcut icon" type="image/png" href="./static/img/favicon.ico">
 </head>
 
 <body>
