--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="keywords" content="币探">
-  <meta name="description" content="">
+  <meta name="keywords" content="比特币，火币，币安，比特币行情，比特币交易，比特币交易行情，比特币钱包，比特币助手，比特币中国，比特币挖矿，火币行情，火币交易，火币app，火币pro，火币比特币，火币交易网，火币网，火币otc，以太坊，okex比特币，币安app，以太坊钱包，币看比特币，btc钱包，虚拟币交易，火币钱包，币头条，币牛牛，非小号，火星财经，imtoken，MyToken，OKEx，区块链，数字货币，虚拟货币">
+  <meta name="description" content="币探 是中国最专业的比特币，火币，币安，比特币行情，比特币交易，比特币交易行情，比特币钱包，比特币助手，比特币挖矿，火币行情的交易平台,并提供BTC比特币/LTC莱特币/ETH/ETC交易信息，多重技术安全防护创造金融级别比特币交易网，保障比特币交易安全。比特币价格实时更新,充值实时到账为您提供最好的比特币交易体验。">
   <link rel="alternate" media="only screen and(max-width: 640px)" href="">
   <meta name="format-detection" content="telephone=no">
   <meta name="apple-mobile-web-app-title" content="币探">
@@ -14,7 +14,7 @@
   <meta name="applicable-device" content="mobile">
   <meta name="MobileOptimized" content="width">
   <meta name="HandheldFriendly" content="true">
-  <title>全球数字货币交易平台-币探</title>
+  <title>比特币|比特币行情|比特币交易|比特币钱包|比特币助手-币探</title>
   <link rel="shortcut icon" type="image/png" href="./static/img/favicon.ico">
 </head>
 
